--- a/_posts/2014-11-29-font-test.md
+++ b/_posts/2014-11-29-font-test.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: フォントテスト
-category: example
+category: examples
 tags : [フォント, サンプル]
 description: ブラウザでのserif, sans-serif, monospaceフォントの確認用。
 ---
